fix(dikweb): fix auth body layout not fully covered

--- a/dikweb/styles/globals.css
+++ b/dikweb/styles/globals.css
@@ -7,7 +7,8 @@ body {
 	background: var(--background);
 	padding: 0;
 	margin: 0;
-	width: fit-content;
+	min-width: fit-content;
+	width: 100%;
 	min-height: 100vh;
 	font-family: var(--font-family);
 }
